frostwire (5.7.2) stable; urgency=high
  * uTP support enabled.
  * Multiple crash fixes.
  * UX updates.

 -- FrostWire Team <contact@frostwire.com>  Wed, 2 Apr 2014 12:03:21 -0500
	
frostwire (5.7.1) stable; urgency=high
  * Wi-Fi sharing discovery improved considerably with JmDNS.
    Removed cling library.
  * Improvements in .torrent creation window:
     1. Web seed url(s) (GetRight style) support.
     2. Associate a Creative Commons, Open Source, or Public Domain license.	
     3. Associate a Bitcoin address for Name-your-price/tips support.
     4. Associate a Litecoin address for Name-your-price/tips support.
     5. Associate a Dogecoin address for Name-your-price/tips support.
     6. Associate a Paypal url for Name-your-price/tips support.
  * Transfers and Library tables now able display Tips/Payment options column.
  * Transfers and Library tables now able display License column.
  * Updated Torrents.fm search engine.
  * Removed Clearbits search engine, service offline for ~2 months now.

 -- FrostWire Team <contact@frostwire.com>  Wed, 12 Mar 2014 16:25:42 -0500

frostwire (5.7.0) stable; urgency=high
  * Updated BitTorrent engine from Azureus/Vuze project.
  * New Torrents.fm meta search integration.
  * Brings back cloud downloads by entering url on search box or open dialog.
  * Chat Tab gone. Chat button now points to http://frostwire.com/chat. 
    Faster startup time.
 -- FrostWire Team <contact@frostwire.com>  Fri, 17 Jan 2014 00:21:30 -0500

frostwire (5.6.9) stable; urgency=high
  * Insanely faster cloud search results.
  * Significant memory optimizations on search result parsing and display.
  * Removed jDownloader libraries, less complexity, lighter app.
  * Cloud audio downloads are much smaller, no audio demuxing necessary from
    video services.
  * Cloud video DASH download support.
  * Smarter playlist name suggestion algorithm takes into account ID3 tags.